changed shape of purchasing options

--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -134,7 +134,7 @@
 
             <img src = "../static/images/backgroundFadeGreen.png" style = "width: 100%; ">
             <div style = "background-color: #60931c; position: relative; bottom: 13px ">
-                <p align = "center" class = "heading"> Our tests</p>
+                <p align = "center" class = "heading"> Purchasing options</p>
                 <div>
                     <div class = "productBox">
                         <img src = "../static/images/onlineReport.png" class = "productImage">
