--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -95,10 +95,44 @@
 
             </div>
         </div>
-            
-        <div id = "howToSection">
+        <div id = "What we test for">
             
             <img src = "../static/images/backgroundFade.png" style = "width: 100%; position:relative; top: 13px">
+            <div class = "WhatWeTestFor">
+                <div style = "position: relative; top:150px">
+                    <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> What we test for</p>
+                    <div align = "center" class = "howToImages">
+                        <div class = "howToBox">
+                            <img src = "../static/images/basket.png" class = "howToImage">
+                            <p >115 foods of a typical European diet</p>
+                        </div>
+                        <div class = "howToBox">
+                            <img src = "../static/images/tweezers.png" class = "howToImage">
+                            <p>8 pathogenic stresses</p>
+                        </div>
+                        <div class = "howToBox">
+                            <img src = "../static/images/toxins.png" class = "howToImage">
+                            <p>Toxins - including metals, chemicals and hydrocarbons</p>
+                        </div>
+                        <div class = "howToBox">
+                            <img src = "../static/images/phone.png" class = "howToImage">
+                            <p>Nutritional Requirements - amino acids, vitamins and minerals</p>
+                        </div>
+                    
+                    </div>
+                    <div align = "center" style = "position: relative; bottom: 5vw">
+                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
+                    </div>
+                </div>
+                
+            </div>
+            <img src = "../static/images/backgroundFadeUpsideDown.png" style = "width: 100%; position:relative; ">
+            
+        </div>
+        
+        <div id = "howToSection">
+            
+            <img src = "../static/images/backgroundFadeGreen.png" style = "width: 100%; position:relative; top: 13px">
             <div class = "howToBar">
                 <div style = "position: relative; top:150px">
                     <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> How it works</p>
@@ -127,13 +161,13 @@
                 </div>
                 
             </div>
-            <img src = "../static/images/backgroundUpsideDown.png" style = "width: 100%; position:relative; ">
+            <img src = "../static/images/backgroundFadeUpsideDownGreen.png" style = "width: 100%; position:relative; ">
         </div>
-
+        
         <div align = "center">
 
-            <img src = "../static/images/backgroundFadeGreen.png" style = "width: 100%; ">
-            <div style = "background-color: #60931c; position: relative; bottom: 13px ">
+            <img src = "../static/images/backgroundFade.png" style = "width: 100%; ">
+            <div style = "background-color: #f9da03; position: relative; bottom: 13px ">
                 <p align = "center" class = "heading"> Purchasing options</p>
                 <div>
                     <div class = "productBox">
@@ -190,7 +224,7 @@
                 </div>
                
             </div>
-            <img src = "../static/images/backgroundFadeGreenUpsideDown.png" style = "width: 100%; position: relative; bottom: 13px">
+            <img src = "../static/images/backgroundFadeUpsideDown.png" style = "width: 100%; position: relative; bottom: 13px">
             
             
         </div>
