3 more testimonies and now all the same size

--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -237,6 +237,7 @@
                     I must say that I have been extremely pleased with the outcome so far and have recommended yourselves to several people."
                    
                 </P>
+                <br>
                 <p class = "testimonieText">
                     Carole - Devon
                 </p>
@@ -246,7 +247,8 @@
             <div class = "testimonieBox">
                 
                 <P class = "testimonieText">
-                    After 10 days he began to feel some improvement, and by the end of the course was back at work after 5 months of being unable to do hardly anything! Thank you so very, very much - we are delighted.
+                    After 10 days he began to feel some improvement, and by the end of the course was back at work after 5 months of being unable to do hardly anything! 
+                    Thank you so very, very much - we are delighted.
                     
                 </P>
                 <p class = "testimonieText">
@@ -255,14 +257,53 @@
                 <img src = "../static/images/fiveStar.png" class = "rating">
             </div>
             <div class = "testimonieBox">
-                
+                <br>
                 <P class = "testimonieText">
                     I can now plan things in advance and expect to be able to carry them through. 
                     
                 </P>
+                <br>
                 <p class = "testimonieText">
                     
                     Lisa - Berkshire
+                </p>
+                <img src = "../static/images/fiveStar.png" class = "rating">
+            </div>
+            <div class = "testimonieBox">
+                
+                <P class = "testimonieText">
+                    After only two weeks of following the results of her hair test Victoria's Eczema has completely gone and now after a month or so her skin 
+                    condition is so much better.
+                </P>
+                
+                <p class = "testimonieText">
+                    <br>
+                    Margaret - Midlands
+                </p>
+                <img src = "../static/images/fiveStar.png" class = "rating">
+            </div>
+            <div class = "testimonieBox">
+                <br>
+                <P class = "testimonieText">
+                    My consultant is amazed and quite frankly so am I. My PSA score is down for the 3rd time!
+
+                </P>
+                <br>
+                <p class = "testimonieText">
+                    Don - Bucks
+                </p>
+                <img src = "../static/images/fiveStar.png" class = "rating">
+            </div>
+            <div class = "testimonieBox">
+                
+                <P class = "testimonieText">
+                    Since I found Bionetics I haven't looked back - the first month was hard as it involved a whole dietary life change, 
+                     but now I have energy and enthusiasm (my spark has returned), my weight has stabilised
+
+                </P>
+                <p class = "testimonieText">
+                    
+                    Bart - Berks
                 </p>
                 <img src = "../static/images/fiveStar.png" class = "rating">
             </div>
