--- a/static/styles.css
+++ b/static/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     font-family: Arial;
     font-size: 1.5rem;
-    color: #262d3a;
+    color: 1e1e1e;
 
 }
 .logoBar{
@@ -15,10 +15,6 @@
     
 }
 
-.navigationBar{
-    background-color: #f9da03;
-   
-}
 
 .header{
     z-index: 999;
@@ -46,17 +42,66 @@
 }
 .navigation{
     width: 100%; 
-    height: 50px; 
+    height: 65px; 
     background-color: #f9da03
     
 }
 .navigationButton{
     display: inline-block; 
     margin-top: 12px; 
-    margin-right:2.5vw;
-    margin-left: 2.5vw
+    margin-right:2.25vw;
+    margin-left: 2.25vw;
+    color: #1e1e1e;
 }
 
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color:#60931c;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+  
+.sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color:#1e1e1e;
+    display: block;
+    transition: 0.3s;
+}
+  
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+  
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    
+}
+  
+.openButton {
+    font-size: 30px;
+    cursor: pointer;
+    background-color:#f9da03;
+    color:#1e1e1e;
+    padding-bottom: 8px;
+    border: none;
+    outline: none;
+}
+  
+.linkPlain:hover, .openButton:hover {
+    color:#60931c;
+}
 .uspsImage{
     padding: 2vw;
 }
@@ -152,7 +197,7 @@
 
 .linkPlain, .boxLink{
     text-decoration: none;
-    color: #262d3a;
+    color: #1e1e1e;
    
 }
 
@@ -212,6 +257,8 @@
 }
 .WhatWeTestFor{
     background-color: #f9da03;
+  
+    padding-bottom: 150px
 }
 .productBar{
     background-color:#60931c;
@@ -225,7 +272,7 @@
  
 .productBox{
     width:400px;
-    background-color: #b6b6d4;
+    background-color: #ffffff;
     display:inline-block;
     border-radius: 200px;
     padding: 50px;
@@ -239,14 +286,14 @@
     border: none;
     outline: none;
     font-size: 1.5rem;
-    
+    color:#1e1e1e;
     
 }
 .active, .collapsible:hover{
     background-color: #f9da03;
 }
 .collapsableContent{
-    width: 300%;
+    width: 100%;
     padding: 0 18px;
     font-size: 1rem;
     max-height: 0;
@@ -287,79 +334,30 @@
     background-color: whitesmoke;
 }
 
-.sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color:#60931c;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-  }
   
-  .sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color:#262d3a;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .sidebar a:hover {
-    color: #f1f1f1;
-  }
-  
-  .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-    
-  }
-  
-  .openbtn {
-    font-size: 30px;
-    cursor: pointer;
-    background-color:#f9da03;
-    color:#262d3a;
-    padding-bottom: 8px;
-    border: none;
-   
-
-  }
-  
-  .openbtn:hover {
-    background-color:#60931c;
-  }
-  
-  .FAQHeader{
+.FAQHeader{
     position:relative;
     bottom: 10vw; 
     right: 35vw;
-  }
-  .FAQBox{
+}
+.FAQBox{
     position: relative;
     bottom: 6vw; 
     left: 3vw; 
-    display: inline
-  }
-  .FAQQuestion{
+    width:80%;
+}
+.FAQQuestion{
     
     display: inline-block
-  }
+}
 
-  .loginBox{
+.loginBox{
     background-color:#f9da03;
     border-radius: 25px;
     display: inline-block;
     padding: 3vw;
-  }
+}
 
-  .loginInput{
+.loginInput{
     border-radius: 10px
-  }
+}
