--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -20,7 +20,17 @@
                 </a>
             </div>
             
-            
+                <div style = "display: inline-block; width: 400px; position: relative; bottom: 15px">
+                
+                    <div style = "display: inline-block">
+                        <a class = "linkPlain" href="mailto:info@bionetics.co.uk">info@bionetics.co.uk</a>
+                    </div>
+                    <div style = "display: inline-block">
+                        <a class = "linkPlain" href="tel:0845 456 0570">0845 456 0570 – 9am-5pm Mon-Fri</a>
+                    </div>
+                
+                </div>
+               
             <img src = "../static/images/15years.jpg" alt = "15 years of Bionetics Ltd" class = "logos" style = "float:right">
         </div>
     
@@ -56,17 +66,17 @@
     
            <div align = "left" id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">×</a>
-                <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/aboutbionetics.htm" >About</a>
-                <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/application.asp" >Hair Test</a>
-                <a class = "linkPlain"href="https://bionetics.co.uk/" >Testimonies</a>
-                <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/contactus.htm" >Contact us</a>
-                <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Shop</a>
-                <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Log In</a>
+                <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/aboutbionetics.htm" >About</a>
+                <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/application.asp" >Hair Test</a>
+                <a class = "sideBarOptions"href="https://bionetics.co.uk/" >Testimonies</a>
+                <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/contactus.htm" >Contact us</a>
+                <a class = "sideBarOptions"href="https://bioneticsnutrition.co.uk/" >Shop</a>
+                <a class = "sideBarOptions"href="https://bioneticsnutrition.co.uk/" >Log In</a>
           </div>
         </nav>
     </header>
     
-    <main class = "content">
+    <main class = "content" >
         <div align = "center">
             <img src = "../static/images/resultsIn5Days.PNG" class = "uspsImage">
             <img src = "../static/images/thousandsHelped.PNG" class = "uspsImage">
@@ -78,7 +88,7 @@
         </div>
 
        <!--top image and text-->
-        <div class="scrollContent" style="max-width:80%;">
+        <div class="scrollContent" style="max-width:80%; min-height: 40vw">
             <img class="mySlides" src="../static/images/firstImageText.png" style="width:100%">
             <img class="mySlides" src="../static/images/secondImageText.jpg" style="width:100%">
             <img class="mySlides" src="../static/images/thirdImageText.jpg" style="width:100%">
@@ -91,21 +101,22 @@
                 <div class="leftButton hoverYellowButton" onclick="plusDivs(-1)">&#10094;</div>
                 <div class="rightButton hoverYellowButton" onclick="plusDivs(1)">&#10095;</div>
 
-                <span class="badge hoverYellow" onclick="selectDivs(1)">1</span>
-                <span class="badge hoverYellow" onclick="selectDivs(2)">2</span>
-                <span class="badge hoverYellow" onclick="selectDivs(3)">3</span>
-                <span class="badge hoverYellow" onclick="selectDivs(4)">4</span>
-                <span class="badge hoverYellow" onclick="selectDivs(5)">5</span>
-                <span class="badge hoverYellow" onclick="selectDivs(6)">6</span>
-                <span class="badge hoverYellow" onclick="selectDivs(7)">7</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(1)">1</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(2)">2</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(3)">3</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(4)">4</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(5)">5</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(6)">6</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(7)">7</span>
 
             </div>
         </div>
-        <div id = "What we test for">
+        
+        <div id = "What we test for" style = "min-height: 700px; position:relative; background-color: #f9da03;">
+            <img src = "../static/images/backgroundFade.png" style = "width: 100%; position:relative; bottom:2px  ">
             
-            <img src = "../static/images/backgroundFade.png" style = "width: 100%; position:relative; top: 13px">
             <div class = "WhatWeTestFor" >
-                <div style = "position: relative; top:150px">
+                <div style = "position: relative; top:10vw">
                     <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> What we test for</p>
                     <div align = "center" class = "howToImages">
                         <div class = "howToBox" style = "position: relative; bottom: 25px">
@@ -136,11 +147,11 @@
             </div>
             
         </div>
-        <img src ="../static/images/swoopsWithImage.png" style = "width: 100%">
-        <div id = "howToSection">
-            
+        
+        <div id = "howToSection" style = "position:relative; background-color: #60931c; ">
+            <img src = "../static/images/TweezersWithHair.jpg" style = "width: 100%; z-index: -1; " >
             <div class = "howToBar">
-                <div style = "position: relative; top:150px">
+                <div style = "position: relative; top:10vw">
                     <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> How it works</p>
                     <div align = "center" class = "howToImages">
                         <div class = "howToBox">
@@ -162,20 +173,21 @@
                     
                     </div>
                     <div align = "center" style = "position: relative; bottom: 5vw">
-                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
+                        <a class = "linkPlain hoverYellow2"href="https://bionetics.co.uk/" > Learn more &#10095</a>
                     </div>
                 </div>
                 
             </div>
-            <img src = "../static/images/backgroundFadeUpsideDownGreen.png" style = "width: 100%; position:relative; z-index: -1 ">
+           
         </div>
         
-        <div align = "center">
-
-            <img src = "../static/images/backgroundFade.png" style = "width: 100%; ">
-            <div style = "background-color: #f9da03; position: relative; bottom: 13px ">
-                <p align = "center" class = "heading"> Purchasing options</p>
-                <div>
+        <div id = "purchasingOptions" align = "center" style = "background-color: #f9da03;">
+            <img src = "../static/images/dinner2.jpg" style = "width: 100%;  position: relative; " > 
+            
+            <div style = "position: relative;  min-height: 1100px; padding-bottom: 100px ">
+                
+                <div style = "position: relative; top: 2vw; ">
+                    <p align = "center" class = "heading"> Purchasing options</p>
                     <div class = "productBox">
                         <img src = "../static/images/onlineReport.png" class = "productImage">
                         <img src = "../static/images/phone2.png" class = "productImage">
@@ -230,12 +242,9 @@
                 </div>
                
             </div>
-            <img src = "../static/images/backgroundFadeUpsideDown.png" style = "width: 100%; position: relative; bottom: 13px">
-            
-            
         </div>
-
-        <div align = "center" class = "testimonieBlock"><!--Testimonies-->
+        <img src = "../static/images/backgroundFade.png" style = "width: 100%; position:relative; bottom: 5px; transform:rotate(180deg); ">
+        <div align = "center" class = "testimonieBlock" style = "position:relative; "><!--Testimonies-->
             
             <div class = "testimonieBox">
                 
@@ -314,11 +323,11 @@
                 <img src = "../static/images/fiveStar.png" class = "rating">
             </div>
             <div  >
-                <a class = "linkPlain"href="https://bionetics.co.uk/" style = "position:relative; bottom: 2vw"> More testimonies &#10095</a>
+                <a class = "linkPlain"href="https://bionetics.co.uk/" style = "position:relative; top: 5vw"> More testimonies &#10095</a>
             </div>
         </div>
 
-        <div id = "FAQs" style = "background-color:  #f9da03; display: block">
+        <div id = "FAQs" style = "background-color:  #f9da03; display: block; ">
             <img src = "../static/images/swoop.png" style = " width: 100%; position:relative; bottom: 13px"">
             
             <div class = "FAQHeader">
@@ -377,6 +386,7 @@
                 </div>
                 
             </div>
+            
             <div>
                 <a class = "linkPlain"href="https://bionetics.co.uk/" style = "position:relative; bottom: 2vw; left: 4vw"> More FAQs &#10095</a>
             </div>
@@ -385,7 +395,7 @@
         
     </main>
 
-    <footer align="center" class = "footer" >
+    <footer align="center" class = "footer" style = "padding-top: 75px;padding-bottom:75px" >
         
         <div style = "padding: 1vw">
             <a href="https://www.facebook.com/Bionetics-Ltd-1401209133426495/" class="fa fa-facebook"></a>
