--- a/static/styles.css
+++ b/static/styles.css
@@ -55,13 +55,13 @@
 }
 
 .sidebar {
-    height: 100%;
+    height: 360px;
     width: 0;
     position: fixed;
     z-index: 1;
-    top: 0;
+    top: 146px;
     left: 0;
-    background-color:#60931c;
+    background-color: #f9da03;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -80,7 +80,7 @@
 }
   
 .sidebar a:hover {
-    color: #f9da03;
+    color: #60931c;
 }
   
 .sidebar .closebtn {
