--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -16,7 +16,7 @@
         <div class = "logoBar"><!--logos + login button-->
             <div id = "logo Block" class = "logoBlock" > <!--logos-->
                 <a href="https://bionetics.co.uk/" class = "linkPlain">
-                    <img src = "../static/images/Logo.jpg" alt = "Bionetics the key to natural wellbeing" class = "logos">
+                    <img src = "../static/images/Logo.png" alt = "Bionetics the key to natural wellbeing" class = "logos">
                 </a>
             </div>
             
@@ -117,16 +117,16 @@
             
             <div class = "WhatWeTestFor" >
                 <div style = "position: relative; top:10vw">
-                    <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> What we test for</p>
+                    <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> What we test for.....</p>
                     <div align = "center" class = "howToImages">
                         <div class = "howToBox" style = "position: relative; bottom: 25px">
                             <img src = "../static/images/foods.png" class = "howToImage" >
-                            <p >115 foods of a typical European diet</p>
+                            <p >115 Foods of a typical European diet</p>
                             
                         </div>
                         <div class = "howToBox">
                             <img src = "../static/images/pathogen.png" class = "howToImage">
-                            <p>8 pathogenic stresses</p>
+                            <p>8 Pathogenic stresses</p>
                             <br>
                         </div>
                         <div class = "howToBox">
@@ -140,7 +140,7 @@
                     
                     </div>
                     <div align = "center" style = "position: relative; bottom: 5vw">
-                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
+                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Example of a report &#10095</a>
                     </div>
                 </div>
                 
@@ -148,11 +148,11 @@
             
         </div>
         
-        <div id = "howToSection" style = "position:relative; background-color: #60931c; ">
+        <div id = "howItWorks" style = "position:relative; background-color: #60931c; ">
             <img src = "../static/images/TweezersWithHair.jpg" style = "width: 100%; z-index: -1; " >
             <div class = "howToBar">
                 <div style = "position: relative; top:10vw">
-                    <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> How it works</p>
+                    <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> How it works.....</p>
                     <div align = "center" class = "howToImages">
                         <div class = "howToBox">
                             <img src = "../static/images/basket.png" class = "howToImage">
@@ -167,13 +167,14 @@
                             <p>Send in the form with your sample</p>
                         </div>
                         <div class = "howToBox">
+                            <img src = "../static/images/onlineReport.png" class = "howToImage">
+                            <p>Results within 5 working days of recieving your sample</p>
+                        </div>
+                        <div class = "howToBox">
                             <img src = "../static/images/phone.png" class = "howToImage">
-                            <p>arrange your 15 minute FREE consultation</p>
+                            <p>Arrange your 15 minute FREE consultation</p>
                         </div>
                     
-                    </div>
-                    <div align = "center" style = "position: relative; bottom: 5vw">
-                        <a class = "linkPlain hoverYellow2"href="https://bionetics.co.uk/" > Learn more &#10095</a>
                     </div>
                 </div>
                 
