--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -90,12 +90,13 @@
        <!--top image and text-->
         <div class="scrollContent" style="max-width:80%; min-height: 40vw">
             <img class="mySlides" src="../static/images/firstImageText.png" style="width:100%">
-            <img class="mySlides" src="../static/images/secondImageText.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/secondImageText.png" style="width:100%">
             <img class="mySlides" src="../static/images/thirdImageText.jpg" style="width:100%">
-            <img class="mySlides" src="../static/images/fouthImageText.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/fourthImageText.jpg" style="width:100%">
             <img class="mySlides" src="../static/images/fifthImageText.jpg" style="width:100%">
             <img class="mySlides" src="../static/images/sixthImageText.jpg" style="width:100%">
             <img class="mySlides" src="../static/images/seventhImageText.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/eighthImageText.jpg" style="width:100%">
 
             <div align = "center" style ="display:inline-block; width:100%">
                 <div class="leftButton hoverYellowButton" onclick="plusDivs(-1)">&#10094;</div>
@@ -108,6 +109,7 @@
                 <span class="badge hoverYellow1" onclick="selectDivs(5)">5</span>
                 <span class="badge hoverYellow1" onclick="selectDivs(6)">6</span>
                 <span class="badge hoverYellow1" onclick="selectDivs(7)">7</span>
+                <span class="badge hoverYellow1" onclick="selectDivs(8)">8</span>
 
             </div>
         </div>
