--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -56,12 +56,12 @@
                     <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Log In</a>
                 </nav>
                 <nav id = "nav" class = "navigationButton" >                   
-                    <button class="openButton" onclick="toggleNav()">☰ </button>
+                    <button class="openButton" onclick="toggleNav()">☰</button>
                 </nav>
             </nav>
             
             <nav id = "sideNav" style = "float:right; display: none">
-                <button class="openButton" onclick="toggleNav()" style = "position: relative; top: 1vw">Menu ☰ </button>
+                <button class="openButton" onclick="toggleNav()" style = "position: relative; top: 1vw">Menu ☰</button>
            </nav>
     
            <div align = "left" id="mySidebar" class="sidebar">
@@ -136,13 +136,13 @@
                             <p>Toxins - including toxic metals, chemicals and hydrocarbons</p>
                         </div>
                         <div class = "howToBox">
-                            <img src = "../static/images/nutrition.png" class = "howToImage">
+                            <img src = "../static/images/pillBox.png" class = "howToImage">
                             <p>Nutritional Requirements - amino acids, vitamins and minerals</p>
                         </div>
                     
                     </div>
                     <div align = "center" style = "position: relative; bottom: 5vw">
-                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Example of a report &#10095</a>
+                        <a class = "linkPlain"href="https://www.bionetics.co.uk/bionetics/bionetics_example_report.pdf" target = "_blank" > Example of a report &#10095</a>
                     </div>
                 </div>
                 
@@ -193,49 +193,74 @@
                     <p align = "center" class = "heading"> Purchasing options</p>
                     <div class = "productBox">
                         <img src = "../static/images/onlineReport.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
                         <img src = "../static/images/phone2.png" class = "productImage">
-                        <p>Online results + 15 minute consultation</p>
+                        <p class = "productText">Online Results + Online Health Guide + 15 min free consultation</p >
                         <p>£59.95</p>
                         <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
                     </div>
                     <div  class = "productBox">
                         <img src = "../static/images/onlineReport.png" class = "productImage">
-                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
                         <img src = "../static/images/mailReport.jpg" class = "productImage">
-                        <p>Online results + 15 minute consultation + posted report</p>
+                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <p class = "productText">Online Results + Online Health Guide + Posted Report + 15 min free consultation</p>
                         <p>£64.95</p>
                         <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
                     </div>
                     <div class = "productBox">
                         <img src = "../static/images/onlineReport.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
                         <img src = "../static/images/phone2.png" class = "productImage">
-                        <p>Online results + 30 minute consultation</p>
+                        <p class = "productText">Online Results + Online Health Guide + 30 min consultation</p>
                         <p>£89.95</p>
                         <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
                     </div>
                     <div  class = "productBox">
                         <img src = "../static/images/onlineReport.png" class = "productImage">
-                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
                         <img src = "../static/images/mailReport.jpg" class = "productImage">
-                        <p>Online results + 30 minute consultation + posted report</p>
+                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <p class = "productText">Online Results + Online Health Guide + Posted Report + 30 min consultation</p>
                         <p>£94.95</p>
                         <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
                     </div>
                     <div class = "productBox">
-                        <img src = "../static/images/onlineReport.png" class = "productImage">
-                        <img src = "../static/images/phone2.png" class = "productImage">
                         <img src = "../static/images/tweezers.png" class = "productImage">
-                        <p>Online results + 15 minute consultation + test kit  </p>
+                        <img src = "../static/images/onlineReport.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
+                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <p class = "productText">Hair Test Tube + Online Results + Online Health Guide + 15 min free consultation</p>
                         <p>£69.95</p>
                         <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
                     </div>
                     <div  class = "productBox">
-                        <img src = "../static/images/onlineReport.png" class = "productImage">
-                        <img src = "../static/images/phone2.png" class = "productImage">
-                        <img src = "../static/images/mailReport.jpg" class = "productImage">
                         <img src = "../static/images/tweezers.png" class = "productImage">
-                        <p>Online results + 15 minute consultation + posted report + test kit </p>
+                        <img src = "../static/images/onlineReport.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
+                        <img src = "../static/images/mailReport.jpg" class = "productImage">
+                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <p class = "productText">Hair Test Tube + Online Results + Online Health Guide + Posted Report + 15 min free consultation</p>
                         <p>£74.95</p>
+                        <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
+                    </div>
+                    <div class = "productBox">
+                        <img src = "../static/images/tweezers.png" class = "productImage">
+                        <img src = "../static/images/onlineReport.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
+                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <p class = "productText">Hair Test Tube + Online Results + Online Health Guide + 30 min consultation</p>
+                        <p>£99.95</p>
+                        <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
+                    </div>
+                    <div  class = "productBox">
+                        <img src = "../static/images/tweezers.png" class = "productImage">
+                        <img src = "../static/images/onlineReport.png" class = "productImage">
+                        <img src = "../static/images/OnlineHealthGuide.png" class = "productImage">
+                        <img src = "../static/images/mailReport.jpg" class = "productImage">
+                        <img src = "../static/images/phone2.png" class = "productImage">
+                        <p class = "productText">Hair Test Tube + Online Results + Online Health Guide + Posted Report + 30 min consultation</p>
+                        <p>£109.95</p>
                         <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/applicationonline.htm" > Learn more &#10095</a>
                     </div>
                     <div>
