--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,7 @@
     font-family: Arial;
     font-size: 1.5rem;
     color: 1e1e1e;
-
+    
 }
 .logoBar{
     background-color: white;
@@ -18,7 +18,7 @@
 
 .header{
     z-index: 999;
-    
+    height: 142px
 }
 
 .logoBlock{
@@ -42,7 +42,7 @@
 }
 .navigation{
     width: 100%; 
-    height: 65px; 
+    
     background-color: #f9da03
     
 }
@@ -240,7 +240,7 @@
 }
 
 .footer{
-    padding: 1vw;
+    height: 300px
 }
 
 .howToBar{
@@ -367,7 +367,8 @@
     background-color:#f9da03;
     border-radius: 25px;
     display: inline-block;
-    padding: 3vw;
+    padding-left: 3vw;
+    width: 250px
 }
 
 .loginInput{
@@ -380,4 +381,27 @@
 
 .hoverGreen:hover{
     color:#60931c;
+}
+
+.logInButton{
+    width: 100px;
+    margin: 10px;
+    background-color: #60931c;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.logInButton:hover {
+    opacity: 0.8;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
