--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -15,7 +15,7 @@
 
         <div class = "logoBar"><!--logos + login button-->
             <div id = "logo Block" class = "logoBlock" > <!--logos-->
-                <a href="https://bionetics.co.uk/" class = "linkPlain">
+                <a href="../views/indexV0.2.html" class = "linkPlain">
                     <img src = "../static/images/Logo.png" alt = "Bionetics the key to natural wellbeing" class = "logos">
                 </a>
             </div>
@@ -53,7 +53,7 @@
                     <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Shop</a>
                 </nav>
                 <nav class = "navigationButton" >                   
-                    <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Log In</a>
+                    <a class = "linkPlain"href="../views/login.html" >Log In</a>
                 </nav>
                 <nav id = "nav" class = "navigationButton" >                   
                     <button class="openButton" onclick="toggleNav()">☰</button>
@@ -71,7 +71,7 @@
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/" >Testimonies</a>
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/contactus.htm" >Contact us</a>
                 <a class = "sideBarOptions"href="https://bioneticsnutrition.co.uk/" >Shop</a>
-                <a class = "sideBarOptions"href="https://bioneticsnutrition.co.uk/" >Log In</a>
+                <a class = "sideBarOptions"href="../views/login.html" >Log In</a>
           </div>
         </nav>
     </header>
