--- a/views/login.html
+++ b/views/login.html
@@ -16,7 +16,7 @@
 
         <div class = "logoBar"><!--logos + login button-->
             <div id = "logo Block" class = "logoBlock" > <!--logos-->
-                <a href="https://bionetics.co.uk/" class = "linkPlain">
+                <a href="../views/indexV0.2.html" class = "linkPlain">
                     <img src = "../static/images/Logo.png" alt = "Bionetics the key to natural wellbeing" class = "logos">
                 </a>
             </div>
